Ajustar cor de fundo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,7 +536,7 @@ li.pokemon img{
     border-color: #a8a878 !important;
     background-color: #a8a878;
 }
-.fight{
+.fighting{
     border-color: #903028 !important;
     background-color: #903028;
 }
