--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,7 @@ li.pokemon img{
 }
 
 .hero{
+    max-width: 400px;
     min-width: 350px;
     width: 30%;
     height: 700px;
@@ -218,6 +219,7 @@ li.pokemon img{
     position: absolute;
 }
 .detalhes-hero{
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -225,10 +227,12 @@ li.pokemon img{
     position: absolute;
     bottom: 0;
     left: 0;
+    right: 0;
     padding: 10px 15px;
+    width: auto;
     height: 50%; /* Ajuste conforme necessário */
     z-index: 10; /* Camada inferior */
-    background: rgb(141, 140, 140); 
+    background: #999999; 
     border-radius: 30px 30px 0 0;
 }
 .area-hero::before{
@@ -270,7 +274,6 @@ li.pokemon img{
     font-size: 1.4rem;
     
 }
-
 .detalhes-hero li{
     display: flex;
     justify-content: center;
@@ -350,7 +353,7 @@ li.pokemon img{
 .sub-menu-st div{
     display: flex;
     justify-content: space-evenly;
-    gap: 5px;
+    gap: 10px;
     width: 100%;
     align-items: center;
     position: relative;
@@ -370,7 +373,7 @@ li.pokemon img{
 }
 .sub-menu-st progress {
     height: 20px;
-    width: 250px;
+    width: 200px;
     border: none;
     background: #d4d4d488; 
     border: 1px solid white;
